fixed navbar z-index to not be bigger than modals

--- a/src/index.css
+++ b/src/index.css
@@ -253,7 +253,7 @@ a:-webkit-any-link {
     left: 0;
     background-color: #FFFFFF;
     border-bottom: 1px solid #e7e7e7;
-    z-index: 1000;
+    z-index: 5;
     width: 100%;
 }
 
